--- a/yudao-module-infra/yudao-module-infra-biz/src/main/resources/codegen/vue3_schema/views/index.vue.vm
+++ b/yudao-module-infra/yudao-module-infra-biz/src/main/resources/codegen/vue3_schema/views/index.vue.vm
@@ -12,6 +12,22 @@
         >
           <Icon icon="ep:plus" class="mr-5px" /> 新增
         </el-button>
+        <el-button
+          type="warning"
+          plain
+          @click="handleImport"
+          v-hasPermi="['${permissionPrefix}:import']"
+        >
+          <Icon icon="ep:upload" /> 导入
+        </el-button>
+        <el-button
+          type="success"
+          plain
+          @click="exportList('${table.classComment}')"
+          v-hasPermi="['${permissionPrefix}:export']"
+        >
+          <Icon icon="ep:download" class="mr-5px" /> 导出
+        </el-button>
       </template>
     </Search>
   </ContentWrap>
@@ -51,21 +67,25 @@
 
   <!-- 表单弹窗：添加/修改 -->
   <${simpleClassName}Form ref="formRef" @success="getList" />
+  <!-- 导入对话框 -->
+  <${simpleClassName}Import ref="importFormRef" @success="getList" />
 </template>
 <script setup lang="ts" name="${table.className}">
 import { allSchemas } from './${classNameVar}.data'
 import * as ${simpleClassName}Api from '@/api/${table.moduleName}/${classNameVar}'
 import ${simpleClassName}Form from './${simpleClassName}Form.vue'
+import ${simpleClassName}Import from './${simpleClassName}Import.vue'
 
 // tableObject：表格的属性对象，可获得分页大小、条数等属性
 // tableMethods：表格的操作对象，可进行获得分页、删除记录等操作
 // 详细可见：https://doc.iocoder.cn/vue3/crud-schema/
 const { tableObject, tableMethods } = useTable({
+  exportListApi: ${simpleClassName}Api.export${simpleClassName}Api,
   getListApi: ${simpleClassName}Api.get${simpleClassName}Page, // 分页接口
   delListApi: ${simpleClassName}Api.delete${simpleClassName} // 删除接口
 })
 // 获得表格的各种操作
-const { getList, setSearchParams } = tableMethods
+const { getList, setSearchParams, exportList } = tableMethods
 
 /** 添加/修改操作 */
 const formRef = ref()
@@ -76,6 +96,12 @@ const openForm = (type: string, id?: number) => {
 /** 删除按钮操作 */
 const handleDelete = (id: number) => {
   tableMethods.delList(id, false)
+}
+
+/** 用户导入 */
+const importFormRef = ref()
+const handleImport = () => {
+  importFormRef.value.open()
 }
 
 /** 初始化 **/
